# dj_simpleblog

./: README.md  pyproject.toml
app/: models.py  views.py
app/migrations/: 0001_initial.py
app/static/css/: style.css
app/templates/app/: base.html  index.html
config/: settings.py
