[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["lim-Ngsw <ancelotty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
django-widget-tweaks = "^1.4.12"
django-allauth = "^0.50.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
